fix: dark mode nav bg

--- a/src/theme/DocItem/Footer/styles.module.css
+++ b/src/theme/DocItem/Footer/styles.module.css
@@ -12,7 +12,7 @@
 }
 
 .contentContainer{
-    background: rgb(242, 242, 242);
+    background: rgba(0, 0, 0, 0.05);
     border-radius: 4px;
     padding: 8px 16px;
 }
